--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -15,3 +15,31 @@ a:hover {
   src: local("Star Jedi"),
     url("~@/assets/fonts/star-jedi.ttf") format("truetype");
 }
+.dp1 {
+  box-shadow: 0 1px 3px rgba(255, 255, 255, 0.12),
+    0 1px 2px rgba(255, 255, 255, 0.24);
+}
+
+.dp2 {
+  box-shadow: 0 3px 6px rgba(255, 255, 255, 0.16),
+    0 3px 6px rgba(255, 255, 255, 0.23);
+}
+
+.dp3 {
+  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.19),
+    0 6px 6px rgba(255, 255, 255, 0.23);
+}
+
+.dp4 {
+  box-shadow: 0 14px 28px rgba(255, 255, 255, 0.25),
+    0 10px 10px rgba(255, 255, 255, 0.22);
+}
+
+.dp5 {
+  box-shadow: 0 19px 38px rgba(255, 255, 255, 0.3),
+    0 15px 12px rgba(255, 255, 255, 0.22);
+}
+body {
+  background-color: #0b0b0b !important;
+  overflow-x: hidden;
+}
